--- a/style.css
+++ b/style.css
@@ -12,8 +12,8 @@ body{
     display: flex;
     height: 100px;
     /* background-color: rgb(116, 72, 16); */
-    background: rgb(147,0,97);
-    background: linear-gradient(75deg, rgba(147,0,97,1) 0%, rgba(27,228,216,1) 100%);
+    /* background: rgb(147,0,97);
+    background: linear-gradient(75deg, rgba(147,0,97,1) 0%, rgba(27,228,216,1) 100%); */
     background-color: transparent;
     justify-content: space-between;
     padding: 0 150px;
@@ -62,19 +62,34 @@ body{
 }
 
 /* ******************* HERO STYLING**************** */
-
-.hero{
+.container{
     background:url('image/background.jpg'); 
     background-size: cover;
     background-position: top; 
     background-repeat: no-repeat;
     height: 100vh;    
+}
+.hero{
+    margin-top: 10%;
     display: flex;
     align-items: center;
     padding-left: 15cap;
     color: white;
 }
-
+.container::before{
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0,0,0,0.7);
+    z-index: 1;
+}
+nav,.hero h1, .hero p, .next-elements {
+    position: relative; 
+    z-index: 2;
+}
 .t-border{
     background-color: white;
     width: 60px;
