--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
 }
 body{
     /* background-color: rgb(0, 0, 0); */
-    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    /* font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; */
 }
 
 /* ********************* NAV STYLING *********** */
@@ -142,3 +142,137 @@ nav,.hero h1, .hero p, .next-elements, .hero .t-border {
     background-color: transparent;
     color: white;
 }
+
+
+/* +++++++++++++++++++++section 2 +++++++++++++++++++++ */
+
+.section2{
+    height: 85vh;
+    background: whitesmoke;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 100px;
+    padding: 100px 20px;
+    
+
+}
+
+
+.section2 .text-container2{
+    width: 40%;
+    height: 100%;
+    text-align: justify;
+    /* background-color: green; */
+    padding: 0px 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 16px;
+}
+
+.text-container2 .first_para{
+    font-size: 16px;
+    letter-spacing: 1pt;
+    color: rgb(169, 12, 125);
+}
+.text-container2 h1{
+    font-size: 50px;
+    word-spacing: 0.1px;
+}
+
+.section2 .second_para{
+    line-height:3ch;
+    font-size: 18px;
+    font-weight: 300;
+    color: rgb(85, 85, 85);
+}
+
+
+/* ++++++++++++++++++++++++++ section 3 +++++++++++++++++++++++ */ 
+
+
+
+.section3{
+    height: 85vh;
+    background: rgba(35, 31, 49, 0.973);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 100px;
+    padding: 100px 20px;
+
+}
+
+.section3 .text-container3{
+    width: 40%;
+    height: 100%;
+    text-align: justify;
+    /* background-color: green; */
+    padding: 0px 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 16px;
+}
+
+.text-container3 .first_para{
+    font-size: 16px;
+    letter-spacing: 1pt;
+    color: #fff;
+}
+
+.text-container3 h1{
+    font-size: 50px;
+    word-spacing: 0.1px;
+    color: rgb(255, 255, 255);
+}
+
+.section3 .second_para{
+    line-height:3ch;
+    font-size: 18px;
+    font-weight: 300;
+    color: rgb(255, 255, 255);
+}
+
+/* +++++++++++++++++++ section 4 +++++++++++++++*/
+
+.section4{
+    height: 50vh;
+    background: url("image/testimonial-bg.jpg");
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+}
+.section4 .text-container4::before{
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0,0,0,0.6);
+    z-index: 1;
+}
+
+.text-container4 i, .h1 ,b{
+    z-index: 2;
+}
+.section4 .text-container4{
+    width: 100%;
+    /* background-color: green; */
+    text-align: center;
+    font-size: 18px;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    color: #fff;
+}
+.text-container4 .h1{
+    text-transform: uppercase;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
